--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3.1'
 
 services:
 
-  db:
+  postgres:
     image: postgres:12
     restart: always
     environment:
-      POSTGRES_PASSWORD: ioannissecret 
-      POSTGRES_USER: ioannis
-      POSTGRES_DB: ioannisdb
+      POSTGRES_PASSWORD: aF1dG2qU5dX1
+      POSTGRES_USER: demo_user
+      POSTGRES_DB: demo_db
     volumes:
       - ./db/data:/var/lib/postgresql/data
       - ./db/scripts:/docker-entrypoint-initdb.d
@@ -18,10 +18,10 @@ services:
     ports:
     - 8001:8080
     depends_on:
-    - db
+    - postgres
     restart: always
     environment:
-      HASURA_GRAPHQL_DATABASE_URL: postgres://ioannis:ioannissecret@db:5432/ioannisdb
+      HASURA_GRAPHQL_DATABASE_URL: postgres://demo_user:aF1dG2qU5dX1@postgres:5432/demo_db
       ## enable the console served by server
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
       ## enable debugging mode. It is recommended to disable this in production
