--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,9 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
+      - name: Start minikube
+        uses: medyagh/setup-minikube@master
       - name: Try the cluster !
         run: kubectl get pods -A
 
