--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Start minikube
-        uses: medyagh/setup-minikube@master
+        uses: kremmydas/setup-minikube@master
       - name: Try the cluster !
         run: kubectl get pods -A
 
