--- a/pch-client-chart/templates/services.yaml
+++ b/pch-client-chart/templates/services.yaml
@@ -7,6 +7,7 @@ metadata:
   labels:
 {{ include "pch-client.labels" $ | indent 4 }}
 spec:
+  type: NodePort
   ports:
   {{- range $value.ports }}
   - name: {{ . | quote }}
