--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Start minikube
         uses: kremmydas/setup-minikube@master
+      - name: Wait for 30 seconds for kube services to be ready
+        run: | 
+          sleep 30
       - name: Try the cluster !
         run:
-          sleep 30
           kubectl get pods -A
       - name: Deploy to minikube
         run:
