--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,28 +27,23 @@ jobs:
         env:
           DOCKER_USER: ${{secrets.DOCKER_USER}}
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-        run: |
-          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
+        run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
       - name: Build the Docker image
-          run: docker compose build
+        run: docker compose build
       - name: Docker Push
-          run: andreask81/frontend:latest
+        run: andreask81/frontend:latest
       - name: Docker Push
-          run: andreask81/parser:latest
+        run: andreask81/parser:latest
       - name: Start minikube
         uses: kremmydas/setup-minikube@master
       - name: Wait for 30 seconds for K8s pods to be ready
-        run: | 
-          sleep 30
+        run: sleep 30
       - name: Deploy to minikube
-        run:
-          helm install -f pch-client-chart/values.yaml pch-client ./pch-client-chart
+        run: helm install -f pch-client-chart/values.yaml pch-client ./pch-client-chart
       - name: Wait for 60 seconds for app pods to be ready
-        run: | 
-          sleep 60
+        run: sleep 60
       - name: Check the pods
-        run:
-          kubectl get pods -A
+        run: kubectl get pods -A
       - name: Test service URL using Ingress Controller
         run: | 
           echo $(minikube ip) pchdemo.local | sudo tee -a /etc/hosts
