--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,18 +32,29 @@ jobs:
           d=$(date +%Y%m%d)
           echo "$d"
           echo "::set-output name=BUILD_NO::${d}_${{ github.run_number }}"
-      - name: docker login
-        env:
-          DOCKER_USER: ${{secrets.DOCKER_USER}}
-          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-        run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-      # Build and push the frontend and parser images
-      - name: Build the Docker image
-        run: docker compose build
-      - name: Docker Push
-        run: docker push andreask81/frontend:${{ steps.version-generator.outputs.BUILD_NO }}
-      - name: Docker Push
-        run: docker push andreask81/parser:${{ steps.version-generator.outputs.BUILD_NO }}
+      # Build and push the PCH Client UI
+      - uses: mr-smithers-excellent/docker-build-push@v5
+        name: Build & push the PCH Client UI
+        with:
+          image: andreask81/frontend
+          tags: ${{ steps.version-generator.outputs.BUILD_NO }}, latest
+          registry: docker.io
+          dockerfile: ui/Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          directory: ui
+
+      # Build and push the PCH Client Parser
+      - uses: mr-smithers-excellent/docker-build-push@v5
+        name: Build & push PCH Client Parser
+        with:
+          image: andreask81/parser
+          tags: ${{ steps.version-generator.outputs.BUILD_NO }}, latest
+          registry: docker.io
+          dockerfile: parser/Dockerfile
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          directory: parser
       # Update the value.yaml with new image tags
       - name: Update files with new image tags
         run: |
