Updated template files

--- a/pch-client-chart/templates/frontend-deployment.yaml
+++ b/pch-client-chart/templates/frontend-deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: {{ .image }}
+        image: "{{ .image.repository }}:{{ .image.frontend_tag }}"
         readinessProbe:
           httpGet:
             path: /
