--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,7 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v2
       - name: Prints the current branch name
-        run: echo running on branch "${GITHUB_BRANCH##*/}"
-        env:
-          GITHUB_BRANCH: ${{ github.ref }}
+        run: echo running on branch "${{ github.ref }}"
       # Generate version based on current date and run number
       - name: Version generator
         id: version-generator
@@ -103,8 +101,8 @@ jobs:
       - name: Commit changes with new version to release branch
         uses: EndBug/add-and-commit@v7.2.1 
         with:
-          # Name of the branch to use
-          branch: ${GITHUB_BRANCH}
+          # Name of the branch to use, if different from the one that triggered the workflow
+          # branch: ${{ github.ref }}
           # The message for the commit. The [skip ci] is required for not trigger the CICD
           message: 'Update image with version ${{ steps.version-generator.outputs.BUILD_NO }} [skip ci]'
 
