--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,7 @@ jobs:
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
-      - name: Prints the current branch name
-        run: echo running on branch "${{ github.ref }}"
+
       # Generate version based on current date and run number
       - name: Version generator
         id: version-generator
@@ -35,11 +34,13 @@ jobs:
           d=$(date +%Y%m%d)
           echo "$d"
           echo "::set-output name=BUILD_NO::${d}_${{ github.run_number }}"
+
       - name: docker login
         env:
           DOCKER_USER: ${{secrets.DOCKER_USER}}
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
         run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
+
       # Build and push the PCH Client UI
       - uses: mr-smithers-excellent/docker-build-push@v5
         name: Build & push the PCH Client UI
@@ -63,6 +64,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           directory: parser
+          
       # Update the value.yaml with new image tags
       - name: Update files with new image tags
         run: |
@@ -98,10 +100,11 @@ jobs:
           kubectl exec $(echo $(kubectl get pods -l app=postgres) | awk '{print $6}') -- sh -c 'psql -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "select * from ixp_server_data;"'
       
       # Commit changes with new version to the current branch
-      - name: Commit changes with new version to release branch
+      - name: Commit changes with new version
         uses: EndBug/add-and-commit@v7.2.1 
         with:
-          # Name of the branch to use, if different from the one that triggered the workflow
+          # The name of the branch to use, if different from the one that triggered the workflow.
+          # Default: the branch that triggered the run
           # branch: ${{ github.ref }}
           # The message for the commit. The [skip ci] is required for not trigger the CICD
           message: 'Update image with version ${{ steps.version-generator.outputs.BUILD_NO }} [skip ci]'
