--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,7 +96,7 @@ jobs:
       # Check ixp_server_data table
       - name: Check ixp_server_data table
         run: |
-          sleep 120
+          sleep 60
           kubectl exec $(echo $(kubectl get pods -l app=postgres) | awk '{print $6}') -- sh -c 'psql -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "select * from ixp_server_data;"'
       
       # Commit changes with new version to the current branch
@@ -105,8 +105,8 @@ jobs:
         with:
           # The name of the branch to use, if different from the one that triggered the workflow.
           # Default: the branch that triggered the run
-          # branch: ${{ github.ref }}
+          # branch: main
           # The message for the commit. The [skip ci] is required for not trigger the CICD
-          message: 'Update image with version ${{ steps.version-generator.outputs.BUILD_NO }} [skip ci]'
+          message: 'Update image with version ${{ steps.version-generator.outputs.BUILD_NO }}'
 
 
