--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           name: ${{github.ref_name}}
           path: Release
+      - name: echo
         run: |
           echo ${{github.ref_name}}
 
