--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,7 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v2
       - name: Get the tag name
-        run: 
-          echo "TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
-          echo "${{ env.TAG }}"
+        run: echo "TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 
       # Generate version based on current date and run number
       - name: Version generator
@@ -44,6 +42,13 @@ jobs:
           DOCKER_USER: ${{secrets.DOCKER_USER}}
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
         run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
+
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: andreask81/parser:${{ env.TAG }}
 
       # Build and push the PCH Client UI
       - uses: mr-smithers-excellent/docker-build-push@v5
