--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,11 @@ jobs:
       #   id: get_version
       #   run: echo ::set-output name=VERSION::${GITHUB_REF#refs/*/}
 
-      - name: Create tag artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{github.ref_name}}
-          path: Release
+      # - name: Create tag artifact
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: ${{github.ref_name}}
+      #     path: Release
 
 
       # Generate version based on current date and run number
