--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
+  # push:
     # branches: [ main ]
     # tags:
     #   - 'v*'
@@ -27,9 +27,9 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v2
         
-      # - name: Get the version
-      #   id: get_version
-      #   run: echo ::set-output name=VERSION::${GITHUB_REF#refs/*/}
+      - name: Get the version
+        id: get_version
+        run: echo "GIT_TAG=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
 
       # - name: Create tag artifact
       #   uses: actions/upload-artifact@v2
@@ -59,7 +59,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: andreask81/parser:${{github.ref_name}}
+          tags: andreask81/parser:${{ env.GIT_TAG }}
 
       # Build and push the PCH Client UI
       - uses: mr-smithers-excellent/docker-build-push@v5
