--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: andreask81/parser:${{ env.GIT_TAG }}
+          tags: andreask81/parser:$GIT_TAG
 
       # Build and push the PCH Client UI
       - uses: mr-smithers-excellent/docker-build-push@v5
