--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,7 @@ jobs:
         id: get_version
         run: | 
           echo "GIT_TAG=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
-          echo $GIT_TAG
-          echo ${{ env.GIT_TAG }}
+          echo "${{ env.GIT_TAG }}""
 
       # - name: Create tag artifact
       #   uses: actions/upload-artifact@v2
@@ -64,7 +63,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: andreask81/parser:$GIT_TAG
+          tags: andreask81/parser:${{ env.GIT_TAG }}
 
       # Build and push the PCH Client UI
       - uses: mr-smithers-excellent/docker-build-push@v5
