--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,17 +32,17 @@ jobs:
       - name: Set the value
         id: step_one
         run: |
-          echo "action_state=yellow" >> $GITHUB_ENV
+          echo "action_state=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
       - name: Use the value
         id: step_two
         run: |
           echo "${{ env.action_state }}" # This will output 'yellow'
         
-      - name: Get the version
-        id: get_version
-        run: | 
-          echo "GIT_TAG=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
-          echo "${{ env.GIT_TAG }}""
+      # - name: Get the version
+      #   id: get_version
+      #   run: | 
+      #     echo "GIT_TAG=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
+      #     echo "${{ env.GIT_TAG }}""
 
       # - name: Create tag artifact
       #   uses: actions/upload-artifact@v2
