--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,13 +26,15 @@ jobs:
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
+        run: |
+          echo "action_state=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
       # - name: Set env
       #   run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
 
-      - name: Set the value
-        id: step_one
-        run: |
-          echo "action_state=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
+      # - name: Set the value
+      #   id: step_one
+      #   run: |
+      #     echo "action_state=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
       - name: Use the value
         id: step_two
         run: |
