--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,30 +26,21 @@ jobs:
     steps:
       - name: Git checkout
         uses: actions/checkout@v2
-      # - name: Set env
-      #   run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
 
-      - name: Set the value
-        id: step_one
-        run: |
-          echo "action_state=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+
       - name: Use the value
         id: step_two
         run: |
-          echo "${{ github.event.release.tag_name }}" # This will output 'yellow'
+          echo "${{ steps.get_version.outputs.VERSION }}"
         
       - name: Get the version
         id: get_version
         run: | 
           echo "GIT_TAG=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
           echo "${{ env.GIT_TAG }}""
-
-      # - name: Create tag artifact
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #     name: ${{github.ref_name}}
-      #     path: Release
-
 
       # Generate version based on current date and run number
       - name: Version generator
