--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    # branches: [ main ]
     tags:
       - 'v*'
   # pull_request:
@@ -19,6 +19,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
+    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
