--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,12 @@ name: CI
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
+  # push:
     # branches: [ main ]
-    tags:
-      - 'v*'
-  # pull_request:
-  #   branches: [ main ]
+    # tags:
+    #   - 'v*'
+  pull_request:
+    branches: [ main ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -19,7 +19,6 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags/')
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -28,20 +27,26 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v2
 
+      - name: Branch name
+        id: branch_name
+        run: |
+          echo ::set-output name=SOURCE_NAME::${GITHUB_REF#refs/*/}
+          echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
+          echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
+
+      - name: Build base image
+        run: |
+          echo $SOURCE_NAME
+          echo $SOURCE_BRANCH
+          echo $SOURCE_TAG
+        env:
+          SOURCE_NAME: ${{ steps.branch_name.outputs.SOURCE_NAME }}
+          SOURCE_BRANCH: ${{ steps.branch_name.outputs.SOURCE_BRANCH }}
+          SOURCE_TAG: ${{ steps.branch_name.outputs.SOURCE_TAG }}
+        
       - name: Get the version
         id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
-
-      - name: Use the value
-        id: step_two
-        run: |
-          echo "${{ steps.get_version.outputs.VERSION }}"
-        
-      # - name: Get the version
-      #   id: get_version
-      #   run: | 
-      #     echo "GIT_TAG=`echo $(git describe --tags --abbrev=0)`" >> $GITHUB_ENV
-      #     echo "${{ env.GIT_TAG }}""
+        run: echo "${{ env.SOURCE_TAG }}""
 
       # Generate version based on current date and run number
       - name: Version generator
