--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,15 +27,24 @@ jobs:
       - name: Git checkout
         uses: actions/checkout@v2
 
-      - name: Create tag artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: ${{github.ref_name}}
-          path: Release
-        
+      # - name: Create tag artifact
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: ${{github.ref_name}}
+      #     path: Release
+      
+      # - name: Set env
+      #   run: echo ::set-env name=RELEASE_VERSION::$(echo ${GITHUB_REF:10})
+
       - name: Get the version
         id: get_version
-        run: echo "${{github.ref_name}}"
+        run: |
+          echo "${{github.ref_name}}"
+          echo "::set-output name=GIT_TAG::${{ github.ref_name }}"
+
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
 
       # Generate version based on current date and run number
       - name: Version generator
@@ -58,7 +67,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: andreask81/parser:${{ env.GIT_TAG }}
+          tags: andreask81/parser:${{ steps.get_version.outputs.VERSION }}
 
       # Build and push the PCH Client UI
       - uses: mr-smithers-excellent/docker-build-push@v5
