--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,19 +62,20 @@ jobs:
           DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
         run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
 
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: andreask81/parser:${{ steps.get_version.outputs.GIT_TAG }}
+      # - name: Build and push
+      #   id: docker_build
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     push: true
+      #     tags: andreask81/parser:${{ steps.get_version.outputs.GIT_TAG }}
 
-      # Build and push the PCH Client UI
+      # Build and push the PCH Client frontend
       - uses: mr-smithers-excellent/docker-build-push@v5
         name: Build & push the PCH Client UI
         with:
           image: andreask81/frontend
-          tags: ${{ steps.version-generator.outputs.BUILD_NO }}, latest
+          tags: ${{ steps.get_version.outputs.GIT_TAG }}, latest
+          # tags: ${{ steps.version-generator.outputs.BUILD_NO }}, latest
           registry: docker.io
           dockerfile: ui/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -86,7 +87,8 @@ jobs:
         name: Build & push PCH Client Parser
         with:
           image: andreask81/parser
-          tags: ${{ steps.version-generator.outputs.BUILD_NO }}, latest
+          tags: ${{ steps.get_version.outputs.GIT_TAG }}, latest
+          # tags: ${{ steps.version-generator.outputs.BUILD_NO }}, latest
           registry: docker.io
           dockerfile: parser/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -99,8 +101,8 @@ jobs:
           file_to_update="pch-client-chart/values.yaml"
           frontendtag="frontend_tag"
           parsertag="parser_tag"
-          sed -i "s/${frontendtag}:.*\$/${frontendtag}: \"${{ steps.version-generator.outputs.BUILD_NO }}\"/g" ${file_to_update}
-          sed -i "s/${parsertag}:.*\$/${parsertag}: \"${{ steps.version-generator.outputs.BUILD_NO }}\"/g" ${file_to_update}
+          sed -i "s/${frontendtag}:.*\$/${frontendtag}: \"${{ steps.get_version.outputs.GIT_TAG }}\"/g" ${file_to_update}
+          sed -i "s/${parsertag}:.*\$/${parsertag}: \"${{ steps.get_version.outputs.GIT_TAG }}\"/g" ${file_to_update}
           cat $file_to_update
       
       # Start minikube
