--- a/pch-client-chart/values.yaml
+++ b/pch-client-chart/values.yaml
@@ -52,12 +52,12 @@ services:
   frontend:
     image: 
       repository: andreask81/frontend
-      frontend_tag: "20211215_124"
+      frontend_tag: "latest"
     replicas: 1
     ports:
       - 80
   parser:
     image: 
       repository: andreask81/parser
-      parser_tag: "20211215_124"
+      parser_tag: "latest"
     replicas: 1
