postgres-ha (disabled)

--- a/pch-client-chart/values.yaml
+++ b/pch-client-chart/values.yaml
@@ -61,3 +61,7 @@ services:
       repository: andreask81/parser
       parser_tag: "latest"
     replicas: 1
+
+# postgresql-ha
+postgresql-ha:
+  enabled: false
